<resources>
    <string name="app_name">Edok X</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="continue_without_signing_up">Продолжить без регистрации</string>
    <string name="order">Заказ</string>
    <string name="next">Далее</string>
    <string name="pay">Оплатить</string>
    <string name="delivery">Доставка</string>
    <string name="where">Куда</string>
    <string name="entrance">Подъезд</string>
    <string name="intercom">Домофон</string>
    <string name="apartment">Кв./офис</string>
    <string name="floor">Этаж</string>
    <string name="comment">Комментарий к заказу</string>
    <string name="receiver_phone">Телефон получателя</string>
    <string name="total">Total</string>
    <string name="open_check">Открыть чек</string>
    <string name="accepted">Принято</string>
    <string name="est_delivery_time">Ориентировочное время доставки: 12:45</string>
    <string name="status_desc_dummy">Ресторан начнет готовить заказ, когда найдется свободный курьер.</string>
    <string name="edok_caps">EDOK</string>
    <string name="lastname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="phone">Телефон</string>
    <string name="email">Электронная почта</string>
    <string name="register">Зарегистрироваться</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Корзина</string>
    <string name="orders">Заказы</string>
    <string name="home">Главная</string>
    <string name="zero">0</string>
    <string name="textViewOrderTemplate">Заказ днём, в 12:45</string>
    <string name="textViewOrderTimeAndRestTemplate">666 ₽, Restoran</string>
</resources>