<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutActivity">

    <LinearLayout
        android:id="@+id/linearLayoutTopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/buttonGoBack"
            style="@style/ImageButtonGoBackStyle"/>

        <TextView
            android:text="@string/delivery"
            style="@style/TextViewTopBarStyle"/>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where"
        android:textSize="40sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutTopBar"/>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="г. Уфа, ул. Примерная, д.136"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWhere"/>

    <EditText
        android:id="@+id/editTextEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/entrance"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"/>

    <EditText
        android:id="@+id/editTextIntercom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/intercom"

        app:layout_constraintStart_toEndOf="@id/editTextEntrance"
        app:layout_constraintTop_toBottomOf="@id/editTextAddress"/>

    <EditText
        android:id="@+id/editTextApartment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/apartment"

        app:layout_constraintTop_toBottomOf="@id/editTextEntrance"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editTextFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/floor"

        app:layout_constraintTop_toBottomOf="@id/editTextIntercom"
        app:layout_constraintStart_toEndOf="@id/editTextApartment"/>

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/comment"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextApartment"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/receiver_phone"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextComment"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewOrderTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="20sp"
                android:layout_marginStart="20dp"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/buttonPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:layout_marginLeft="20dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textViewOrderTotal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>